@@ -29,45 +29,51 @@ while the link on the right leads to a search for the package on
 </tr> 
 <tr bgcolor="#E0E0E0">
   <td><a href="http://www.gtk.org/">gtk</a></td>
-  <td>required</td>
-  <td>provides the gretl GUI</td>
+  <td><p>required</p></td>
+  <td><p>provides the gretl GUI</p></td>
   <td><a href="http://rpmfind.net/linux/rpm2html/search.php?query=gtk">search</a></td>
 </tr>
 <tr bgcolor="#E0E0E0">
   <td><a href="http://www.xmlsoft.org/">libxml</a></td>
-  <td>required</td>
-  <td>open and save data files in the default format</td>
+  <td><p>required</p></td>
+  <td><p>open and save data files in the default format</p></td>
   <td><a href="http://rpmfind.net/linux/rpm2html/search.php?query=libxml">search</a></td>
 </tr>
 <tr bgcolor="#E0E0E0">
   <td><a href="http://www.netlib.org/lapack/">lapack</a></td>
-  <td>required</td>
-  <td>various linear algebra functions</td>
+  <td><p>required</p></td>
+  <td><p>various linear algebra functions</p></td>
   <td><a href="http://rpmfind.net/linux/rpm2html/search.php?query=lapack">search</a></td>
 </tr>
 <tr bgcolor="#E0E0E0">
+  <td><a href="http://www.fftw.org/">fftw3</a></td>
+  <td><p>required</p></td>
+  <td><p>Fast Fourier Transform</p></td>
+  <td><a href="http://rpmfind.net/linux/rpm2html/search.php?query=fftw3">search</a></td>
+</tr>
+<tr bgcolor="#E0E0E0">
   <td><a href="http://www.gnuplot.info/">gnuplot</a></td>
-  <td>required</td>
-  <td>generate graphs</td>
+  <td><p>required</p></td>
+  <td><p>generate graphs</p></td>
   <td><a href="http://rpmfind.net/linux/rpm2html/search.php?query=gnuplot">search</a></td>
 </tr>
 <tr bgcolor="#E0E0E0">
   <td><a href="http://cnswww.cns.cwru.edu/~chet/readline/rltop.html">readline</a></td>
-  <td>optional</td>
-  <td>provides a nice editable command line in <tt>gretlcli</tt>,
-      the command-line program</td>
+  <td><p>optional</p></td>
+  <td><p>provides a nice editable command line in <tt>gretlcli</tt>,
+      the command-line program</p></td>
   <td><a href="http://rpmfind.net/linux/rpm2html/search.php?query=readline">search</a></td>
 </tr>
 <tr bgcolor="#E0E0E0">
   <td><a href="http://www.gnome.org/">gnome</a></td>
-  <td>optional</td>
-  <td>gretl is integrated into the gnome desktop</td>
+  <td><p>optional</p></td>
+  <td><p>gretl is integrated into the gnome desktop</p></td>
   <td><a href="http://rpmfind.net/linux/rpm2html/search.php?query=gnome">search</a></td>
 </tr>
 <tr bgcolor="#E0E0E0">
   <td><a href="http://swox.com/gmp/">GMP</a></td>
-  <td>optional</td>
-  <td>support multiple-precision OLS plugin</td>
+  <td><p>optional</p></td>
+  <td><p>support multiple-precision OLS plugin</p></td>
   <td><a href="http://rpmfind.net/linux/rpm2html/search.php?query=libgmp">search</a></td>
 </tr>
 </table>
