@@ -3896,6 +3896,7 @@ void startR (const char *Rcommand)
     free(list);
 
     if (dataset_is_time_series(datainfo)) {
+	fputs("# load data from gretl\n", fp);
 	fputs("vnum <- as.double(R.version$major) + (as.double(R.version$minor) / 10.0)\n", fp);
 	fputs("if (vnum > 1.89) library(stats) else library(ts)\n", fp);
 	fprintf(fp, "source(\"%s\", echo=TRUE)\n", Rdata);
@@ -3906,6 +3907,7 @@ void startR (const char *Rcommand)
 	build_path(Rtmp, paths.userdir, "Rtmp", NULL);
 	fq = fopen(Rtmp, "w");
 	if (fq != NULL) {
+	    fputs("# load data from gretl\n", fq);
 	    fprintf(fq, "gretldata <- read.table(\"%s\", header=TRUE)\n", Rdata);
 	    fprintf(fq, "attach(gretldata)\n");
 	    fclose(fq);
